--- a/.github/workflows/android-ci.yaml
+++ b/.github/workflows/android-ci.yaml
@@ -24,6 +24,9 @@ jobs:
 
       - name: Set up Java 17
         uses: actions/setup-java@v3
+
+      - name: Build APK
+        run: ./gradlew app:assembleDebug
         with:
           java-version: 17
           distribution: temurin
